app/src/main/java/com/example/truckercore/shared/errors/StrategyNotFoundException.kt
package com.example.truckercore.shared.errors

class StrategyNotFoundException(message: String? = null) : Exception(message)